styles.css
html, body{
    height: 100%;
    margin: 0;
}
body{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background-color: rgb(20, 70, 114);
}
.gameContainer{
    width: 50em;
    height: 50em;
    display: flex;
    min-height: 20em;
    flex-direction: column;
}
.gameContainer__info{
    height: 20%;
    background-color: rgb(14, 57, 94);
    margin-bottom: 1em;
    border-radius: 1.5em;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0 2em;
    box-shadow: 0 0 .7em #333;
}
.grow{
    animation: grow-letter .3s;
    animation-fill-mode: forwards;
}
.shrink{
    animation: shrink-letter .3s;
    animation-fill-mode: forwards;
}
.gameContainer__info__division{
    width: 33%;
    display: flex;
    justify-content: center;
}
.gameContainer__info p{
    font-size: 3.5em;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: white;
}
.gameContainer__info__score{
    display: flex;
}
.gameContainer__info__score p{
    font-family:Arial, Helvetica, sans-serif;
    padding: 0 .4em;
    font-weight: bold;
}
#o-indicator, #x-indicator{
    font-size: 3em;
    color: #bbb;
}
#x-score{
    border-right: .1em solid white;
}
.gameContainer__playArea{
    background-color: rgb(14, 57, 94);
    height: 80%;
    display: flex;
    justify-content: center;
    padding: 2em;
    border-radius: 1.5em;
    box-shadow: 0 0 .7em #333;
}
.gameContainer__playArea__board{
    width: 80%;
    height: 100%;
    display: grid;
    grid-template-areas:
        "1 2 3"
        "4 5 6"
        "7 8 9";
}
.boardCell{
    cursor: pointer;
    position: relative;
    -webkit-tap-highlight-color: rgb(14, 57, 94);
}
.boardCell:active{
    background-color: rgb(14, 57, 94);
}
.board__cell1, .board__cell4, .board__cell7{
    border-right: 1em solid white;
}
.board__cell2, .board__cell5, .board__cell8{
    border-right: 1em solid white;
}
.board__cell1, .board__cell2, .board__cell3{
    border-bottom: 1em solid white;
}
.board__cell4, .board__cell5, .board__cell6{
    border-bottom: 1em solid white;
}
.boardCell__letter_O{
    border-radius: 50%;
    position: absolute;
    animation: appear-O .4s;
    animation-fill-mode: forwards;
}
.boardCell__letter_X1{
    width: 1.3em;
    background-color: white;
    position: absolute;
    top: 7%;
    left: 45%;
    rotate: -45deg;
    animation: appear-X .2s;
    animation-delay: .2s;
    animation-fill-mode: forwards;
}
.boardCell__letter_X2{
    width: 1.3em;
    background-color: white;
    position: absolute;
    top: 7%;
    left: 45%;
    rotate: 45deg;
    animation: appear-X .2s;
    animation-fill-mode: forwards;
}

.winner{
    position: fixed;
    background-color: rgb(14, 57, 94);
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    color: white;
    width: 50%;
    height: 30%;
    border-radius: 10%;
    padding: 2em;
    box-shadow: 0 0 3em #333;
    display: none;
}

.winner p{
    font-size: 2em;
    top: 25%;
    left: 20%;
}
.winner a{
    top: 60%;
    left: 38%;
    background-color: white;
    color: rgb(14, 57, 94);
    padding: .5em 1em;
    border-radius: 1em;
    font-weight: bold;
    cursor: pointer;
}
.winner a:hover{
    background-color: #ccc;
}

@keyframes appear-O{
    0% {
        top: 50%;
        left: 50%;
        border: none; 
        width: 0; 
        height: 0;
    }
    100% {
        top: 10%;
        left: 10%;
        border:1.3em solid white;
        width: 60%;
        height: 60%;
    }
}
@keyframes appear-X {
    0%{
        height: 0;
    }
    100%{
        height: 90%;
    }
}
@keyframes appear{
    0%{
        opacity: 0;
    }
    100%{
        opacity: 100%;
    }
}
@keyframes fade {
    0%{
        opacity: 100%;
    }
    100%{
        opacity: 0%;
        z-index: -1;
    }
}
@keyframes grow-letter{
    0% {font-size: 3em; color: #bbb;}
    100% {font-size: 6em; color: white;}
}
@keyframes shrink-letter {
    0% {font-size: 6em; color: white;}
    100%{font-size: 3em; color: #bbb;}
}

@media  screen and (max-width: 52em), (max-height: 52em)   {
    .gameContainer{
        width: 40em;
        height: 40em;
    }
    @keyframes appear-O{
        0% {
            top: 50%;
            left: 50%;
            border: none; 
            width: 0; 
            height: 0;
        }
        100% {
            top: 9%;
            left: 10%;
            border:1em solid white;
            width: 60%;
            height: 60%;
        }
    
    }
}
@media  screen and (max-width: 42em), (max-height: 42em){
    .gameContainer{
        width: 30em;
        height: 30em;
    }
    @keyframes appear-O{
        0% {
            top: 50%;
            left: 50%;
            border: none; 
            width: 0; 
            height: 0;
        }
        100% {
            top: 11%;
            left: 12%;
            border:.7em solid white;
            width: 55%;
            height: 55%;
        }
    }
    .gameContainer__info__score p{
        font-size: 2.5em;
    }
    .boardCell__letter_X1, .boardCell__letter_X2{
        width: 1em;
        left: 42%;
        top: 6%;
    }
    @keyframes grow-letter{
        0% {font-size: 2em; color: #bbb;}
        100% {font-size: 4em; color: white;}
    }
    @keyframes shrink-letter {
        0% {font-size: 4em; color: white;}
        100%{font-size: 2em; color: #bbb;}

}
}

